--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -1,3 +1,4 @@
+#labels Phase-Implementation
 #Welcome wiki page of the project
 
 = Introduction =
@@ -9,3 +10,11 @@ RUR-PLE is very similar to GVR, but RUR-PLE can use all Python features (while G
 = Details =
 
 We use Google Groups to communicate and the group is https://groups.google.com/group/rur-ple-discuss
+
+= Translation =
+A "basic" translation includes TWO files:
+ - a ".po" file, added in the proper directory (folder: rur_locale)
+ - a "rur.htm" file, also added in the proper directory (folder: lessons/it); this file is the one displayed in the browser.  Ideally, this last folder should also contain a translation of all the lessons! :-)  At the very least, make a copy of an existing rur.htm file (e.g. the English one) and put it in the appropriate folder.
+ - Then you can edit the upper section of rur_py/translation.py
+
+More soon about how to translate the lessons. Those are all HTML pages and we're currently looking into how to make it easier for translator to provide help without having to care about the file structure. We are also migrating to XHTML and reviewing some slight markup bugs, so you might want to hold on a bit longer before starting to translate (Dec-31-2009).
