--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -7,7 +7,7 @@ RUR-PLE is very similar to GVR, but RUR-PLE can use all Python features (while G
 [edit] 
 
 
-= Details =
+= Mailing List =
 
 We use Google Groups to communicate and the group is https://groups.google.com/group/rur-ple-discuss
 
