--- a/wiki/UI_sizes.wiki
+++ b/wiki/UI_sizes.wiki
@@ -6,24 +6,34 @@ The purpose is to make it easy for developers and people not liking the default 
 
 We're working on a 10" netbook size (1024 x 600), but you could eventually play with the files below to fit a smaller resolution screen at startup without having scrollbars.
 
+= Variables =
+All values have been moved to rur_py/misc.py into SCREEN.
+SCREEN=[800,660,290,57,34,6]
+where	800 is rurple window size width at startup
+	660 is rurple window size height at startup
+	290 is the programming pane width in "code and learn" tab
+	57 is the debugging window height at the lower right in "code and learn"
+	34 is Reeborg's world brick length
+	6 is Reeborg's world brick thickness
 
-= Rur-ple size at startup =
+= Code location =
+== Rur-ple size at startup ==
 Defined in rur_start.py
- * line 110: size = (800, 660)
- * line 171: self.SetSize((800, 660)) <- this line overrides the former one
+ * line 110: size = (misc.SCREEN[0], misc.SCREEN[1])
+ * line 171: self.SetSize((misc.SCREEN[0], misc.SCREEN[1])) <- this line overrides the former one
 
-= World drawing size in pixel =
+== World drawing size in pixel ==
 Defined in world_creation.py
- * line 221: tile_info = (34, 6)  <- 34 is brick length, 6 the brick thickness
+ * line 222: tile_info = (misc.SCREEN[4], misc.SCREEN[5])
  * beepers centering is defined below and adjusted based on above parameters
- * even a much small world doesn't really need adjusting the beeper settings
+ * even a much smaller world doesn't really need adjusting the beeper settings
 
-= Code and Learn windows split =
+== Code and Learn windows split ==
 Defined in sash.py
- * line 55: win.SetDefaultSize(wx.Size(290, 600)) <- 290 is the width of the program area (left pane)
- * line 73: self.bottomWindow.SetDefaultSize(wx.Size(800, 57)) <- 57 is the height of the debug window (right lower pane)
+ * line 56: win.SetDefaultSize(wx.Size(misc.SCREEN[2], 600))
+ * line 74: self.bottomWindow.SetDefaultSize(wx.Size(800, misc.SCREEN[3]))
 
-= version 1.0.1 sizes =
+== version 1.0.1 sizes ==
 Current released version launches with:
  * screen size of 900 x 660
  * program code left pane of 300 (code and learn)
