--- a/wiki/UI_sizes.wiki
+++ b/wiki/UI_sizes.wiki
@@ -10,16 +10,16 @@ We're working on a 10" netbook size (1024 x 600), but you could eventually play 
 All values have been moved to the variable initialization section in rur_start.py and the variable is called SCREEN.
 
 {{{misc.SCREEN=[800,660,290,57,34,6,13,12,9]}}}
-
-where	800 is rurple window size width at startup
-	660 is rurple window size height at startup
-	290 is the programming pane width in "code and learn" tab
-	57 is the debugging window height at the lower right in "code and learn"
-	34 is Reeborg's world brick length
-	6 is Reeborg's world brick thickness
-	13 is the beeper position offset
-	12 is Reeborg's horizontal offset
-	9 is Reeborg's vertical offset
+where
+ *	800 is rurple window size width at startup
+ *	660 is rurple window size height at startup
+ *	290 is the programming pane width in "code and learn" tab
+ *	57 is the debugging window height at the lower right in "code and learn"
+ *	34 is Reeborg's world brick length
+ *	6 is Reeborg's world brick thickness
+ *	13 is the beeper position offset
+ *	12 is Reeborg's horizontal offset
+ *	9 is Reeborg's vertical offset
 
 Working values for 10" screen at 1024x600 seems to be {{{misc.SCREEN = [800,550,350,40,27,5,8,8,3]}}}.
 
